Consertando o primeiro desafio

--- a/curso/1_HTML_CSS/2_HTML/desafios/desafio1.html
+++ b/curso/1_HTML_CSS/2_HTML/desafios/desafio1.html
@@ -8,7 +8,7 @@
 <body>
     <div>
         <h2>Rhom, O Mundo Moribundo</h2>
-        <img src="img/imagem-3.jpg" alt="Imagem de Rhom">
+        <img src="img\imagem-3.jpg" alt="Imagem de Rhom">
         <p>Essa é Rhom, lar de Ezlan, O Rei Imortal, uma terra desolada e abandonada a prórpia sorte. A Raiz já esteve aqui, mas foi derrotada, Ezlan sacrificou seu povo para isso.</p>
         <ul>
             <li>Areia</li>
