--- a/curso/1_HTML_CSS/3_CSS/index.html
+++ b/curso/1_HTML_CSS/3_CSS/index.html
@@ -45,6 +45,103 @@
         <li>Maçã</li>
         <li>Abacate</li>
     </ul>
+
+    <!-- 8 - Classes -->
+    <p class="paragraph">Algum texto</p>
+    <p class="paragraph">Algum texto 2</p>
+    <p class="paragraph">Algum texto 3</p>
+
+    <!-- 9 - Ids -->
+    <h1 id="exclusive-id">Esse é meu título com id</h1>
+
+    <!-- 10 - Multiplas Regras, ordem do css -->
+    <h2 id="algum-titulo" class="titulo">Algum Texto 1</h2>
+    <h2 class="titulo">Algum Texto 2</h2>
+    <h2>Algum Texto 3</h2>
+
+    <!-- 11 - Cores por nome -->
+    <p class="color-name">Qualquer texto para nome de cores</p>
+
+    <!-- 12 - Cores em hex -->
+    <!-- Em hex, os 2 primeiros caracteres se referem ao Vermelho, os 2 seguintes ao Verde e os 2 últimos o Azul -->
+    <p class="hex">Texto com cores em hex</p>
+    <p class="hex" id="hex-2">Texto com cores em hex 2</p>
+
+    <!-- 13 - Hex simplificado -->
+    <p class="simple-hex">Texto com hex simplificado</p>
+    <p class="simple-hex" id="simple-hex2">Texto com hex simplificado 2</p>
+
+    <!-- 14 - RGB -->
+    <p class="rgb">Texto com RGB</p>
+    <p class="rgb" id="mixed-rgb">Texto misturando RGB</p>
+
+    <!-- 15 - RGBA -->
+    <p class="rgba">Texto com RGBA</p>
+    <p class="rbga" id="rgba2">Texto com RGBA 2</p>
+
+    <!-- 16 - HSL -->
+    <p class="hsl">Texto com HSL</p>
+    <p class="hls" id="hsl2">Texto com HSL 2</p>
+
+    <!-- 17 - Background-color -->
+    <p class="bg">Mudando o bg</p>
+    <h2 class="bg" id="bg-2">Mudando o bg do H2</h2>
+
+    <!-- 18 - Opacidade Bg -->
+    <div class="bg-opacity">
+        <p>Estou aqui</p>
+    </div>
+
+    <div class="bg-opacity-2">
+        <p>Ficando mais visível</p>
+    </div>
+
+    <!-- 19 - rgba com opacidade -->
+    <div class="rgba-opacity">
+        <h1>Este h1 estará visível</h1>
+    </div>
+
+    <!-- 20 - bg image -->
+    <h1 class="bg-image">Um título com imagem</h1>
+
+    <!-- 21 - Centralizando img de bg -->
+    <div class="not-centered-bg"></div>
+    <div class="centered-bg"></div>
+
+    <!-- 22 - Largura e Altura -->
+    <div class="height-width"></div>
+    <div class="height-width-2"></div>
+
+    <!-- 23 - Padding -->
+    <div class="without-padding">Texto sem padding</div>
+    <div class="padding">Texto com padding</div>
+
+    <!-- 24 - Shorthand padding -->
+    <!-- O shorthand para o padding irá seguir essa ordem Top, Right, Bottom e Left -->
+    <p class="shorthand-padding">Texto com padding em shorthand</p>
+    <p class="shorthand-padding-2">Outro texto com padding em shorthand</p>
+
+    <!-- 25 - Border-box -->
+    <div class="without-border-box">
+        <p>Conteúdo 1</p>
+    </div>
+
+    <div class="border-box">
+        <p>Conteúdo 2</p>
+    </div>
+
+    <!-- 26 - Border -->
+    <div class="border">Borda</div>
+    <div class="border-2">Borda 2</div>
+
+    <!-- 27 - Borda arredondada, border-radius -->
+    <div class="rounded-p">Bordinha arredondada</div>
+    <div class="rounded-p-2">Bordinha arredondada 2</div>
+
+    <!-- 28 - Box model -->
+    <div class="box-model">
+        <p>Todas as propriedades do box-model</p>
+    </div>
 </body>
 
 </html>
