--- a/curso/1_HTML_CSS/3_CSS/index.html
+++ b/curso/1_HTML_CSS/3_CSS/index.html
@@ -32,6 +32,11 @@
     <p>Eu tbm</p>
     <P>Geral foi</P>
 
+    <!-- Sticky -->
+    <div class="sticky">
+        <span>Sticky</span>
+    </div>
+
     <!-- 4 External CSS -->
     <h3>Titulozinho Verde</h3>
 
@@ -142,6 +147,59 @@
     <div class="box-model">
         <p>Todas as propriedades do box-model</p>
     </div>
+
+    <!-- 29 - Text Alignment -->
+    <p class="text-aligned">Alinhado a direita</p>
+    <div class="container-center">
+        <h2>Título centralizado</h2>
+        <p>Texto Centralizado</p>
+    </div>
+
+    <!-- Display -->
+    <div class="inline-box">A</div>
+    <div class="inline-box">B</div>
+    <div class="inline-box">C</div>
+    <span class="block">Span</span>
+    <span class="block">Span 2</span>
+
+    <!-- Escondendo elementos -->
+    <p class="invisible">Escondido</p>
+
+    <!-- Positions -->
+        <!-- Static -->
+        <div class="static">
+            <span>Static</span>
+        </div>
+
+        <!-- Relative -->
+        <div class="relative">
+            <span>Relative</span>
+        </div>
+        <p>Eu sou um parágrafo</p>
+
+        <!-- Absolute -->
+        <div class="absolute">
+            <span>Absolute</span>
+        </div>
+        <p>Eu sou um parágrafo</p>
+
+        <!-- Relative com Absolute -->
+        <div class="relative-container">
+            <div class="absolute-1"></div>
+            <div class="absolute-2"></div>
+        </div>
+
+        <!-- Fixed -->
+        <div class="fixed">
+            <span>Fixed</span>
+        </div>
+
+        <!-- Z-index -->
+        <div class="relative-container">
+            <div class="absolute-3"></div>
+            <div class="absolute-4"></div>
+            <div class="absolute-5"></div>
+        </div>
 </body>
 
 </html>
