--- a/curso/1_HTML_CSS/5_FORMS/index.html
+++ b/curso/1_HTML_CSS/5_FORMS/index.html
@@ -90,6 +90,91 @@
         <input type="password" name="password">
       </div>
 
+      <!-- Radio button -->
+      <div>
+        <label for="car_model">Escolha o modelo do seu carro:</label>
+        <div class="radio">
+          <input type="radio" value="bmw" name="car_model">
+          <label for="bmw">BMW</label>
+        </div>
+        <div class="radio">
+          <input type="radio" value="ferrari" name="car_model">
+          <label for="ferrari">Ferrari</label>
+        </div>
+        <div class="radio">
+          <input type="radio" value="mercedez" name="car_model">
+          <label for="mercedez">Mercedez</label>
+        </div>
+      </div>
+
+      <!-- Checkbox -->
+      <div>
+        <label for="car_options">Escolha opções para o seu carro:</label>
+        <div class="radio">
+          <input type="checkbox" name="car_options[]" value="big_tires">
+          <label for="big_tires">Pneus Grandes</label>
+        </div>
+        <div class="radio">
+          <input type="checkbox" name="car_options[]" value="turbo_engine">
+          <label for="turbo_engine">Motor Turbo</label>
+        </div>
+        <div class="radio">
+          <input type="checkbox" name="car_options[]" value="hybrid">
+          <label for="hybrid">Híbrido</label>
+        </div>
+      </div>
+
+      <!-- Datas -->
+      <div>
+        <label for="birthday">Data de Nascimento:</label>
+        <input type="date" name="birthday">
+      </div>
+
+      <!-- Arquivos -->
+      <div>
+        <label for="image">Insira sua Imagem</label>
+        <input type="file" name="image">
+      </div>
+
+      <!-- Números -->
+      <div>
+        <label for="salary">Quanto ganha no seu emprego atual?</label>
+        <input type="number" name="salary">
+      </div>
+
+      <!-- E-mails -->
+      <div>
+        <label for="email">Digite o seu e-mail:</label>
+        <input type="email" name="email">
+      </div>
+
+      <!-- Value -->
+      <div>
+        <label for="email">Digite o seu e-mail: (Com value)</label>
+        <input type="email" name="email" value="exemplo@email.com">
+      </div>
+
+      <!-- Placeholder -->
+      <div>
+        <label for="email">Digite o seu e-mail: (Com Placeholder)</label>
+        <input type="email" name="email" placeholder="exemplo@email.com">
+      </div>
+
+      <!-- Disabled -->
+      <div>
+        <p>Tente preencher o campo abaixo</p>
+        <input type="text" disabled>
+      </div>
+
+      <!-- Required -->
+      <div>
+        <label for="birthyear">Digite o seu ano de nascimento:</label>
+        <input type="text" placeholder="Digite o ano que nasceu" required>
+      </div>
+
+      <!-- Resetar form -->
+      <input type="reset" value="Limpar">
+
       <!-- Envio de form -->
       <input type="submit" value="Enviar">
     </form>
